--- a/.travis.yml
+++ b/.travis.yml
@@ -4,31 +4,23 @@ sudo: required
 dist: trusty
 
 go:
-- 1.9
+- "1.9"
+- "1.10"
+- "1.11"
 
-before_install:
-# - ./script/install-packages.sh
+before_install: true
 
 install: true
 
 before_script:
 - cd "${TRAVIS_BUILD_DIR}"
-- export GO15VENDOREXPERIMENT=1
-# - go get -u -v github.com/tools/godep
-- go get -u github.com/golang/dep/cmd/dep
-# - cd src
 
 script:
-# - godep go test ./... -v
-# exclude vendor dir under go1.9
-# - go test $(go list ./...|grep -v vendor) -v
-- dep ensure -v
-- go test -v ./...
+- make -f Makefile test
 
 branches:
   only:
   - master
-  - develop
 
 notifications:
   email:
