--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ before_script:
 - cd "${TRAVIS_BUILD_DIR}"
 
 script:
-- make -f Makefile test
+- make -f Makefile dep
+- go test -race -coverprofile=coverage.txt -covermode=atomic
 
 branches:
   only:
@@ -26,3 +27,6 @@ notifications:
   email:
     on_success: never
     on_failure: change
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
